Modernize predictive maintenance ecosystem: Refactored Java DTOs to camelCase, optimized Python inference complexity, fixed IDE module resolution, and improved frontend loading UX with persistent sidebar